--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   card_swiper: ^2.0.3
   flutter_easyloading: ^3.0.5
   persistent_bottom_nav_bar: ^4.0.2
+  provider: ^6.0.5
+  image_picker: ^0.8.7+4
+  flutter_easyloading: ^3.0.5
 
 
 
