--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,9 +44,9 @@ dependencies:
   card_swiper: ^2.0.3
   flutter_easyloading: ^3.0.5
   persistent_bottom_nav_bar: ^4.0.2
-  provider: ^6.0.5
+  provider: ^6.0.0
   image_picker: ^0.8.7+4
-  flutter_easyloading: ^3.0.5
+  firebase_storage: ^11.1.1
 
 
 
@@ -59,7 +59,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  #flutter_lints: ^2.0.0
+  flutter_lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
